# referal_codes_test_task

./: .gitignore  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 65cbab021cd3_add_fastapi_users.py
app/: database.py  dependencies.py
app/handlers/: referral_codes.py  users.py
app/models/: base.py  referral_codes.py  users.py
settings/: env.example  logger_config.json
src/: referral_codes.py  users.py
temolates/auth/: login.html  success.html
