[tool.poetry]
name = "referal-codes-test-task"
version = "0.1.0"
description = ""
authors = ["ph4nt0mm <100.ac@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
