[tool.poetry]
name = "referal-codes-test-task"
version = "0.1.0"
description = ""
authors = ["ph4nt0mm <100.ac@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
asyncpg = "^0.30.0"
pydantic-settings = "^2.8.1"
alembic = "^1.15.1"
pydantic = "^2.10.6"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
jinja2 = "^3.1.6"
aiohttp = "^3.11.13"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
